// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit bottom toolbar renders correctly 1`] = `
<Toolbar
  id="audit-overview-bottom-toolbar"
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <Component
      variant="pagination"
    >
      <PaginationContainer
        onSetPage={[Function]}
        onSetPageSize={[Function]}
        page={1}
        pageSize={10}
        paginationId="audit-overview-bottom-pagination"
        total={20}
      />
    </Component>
  </ToolbarContent>
</Toolbar>
`;

exports[`Audit top toolbar renders correctly 1`] = `
<Toolbar
  id="audit-overview-top-toolbar"
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <Component
      variant="label"
    >
      Search
    </Component>
    <Component>
      <Component>
        <ForwardRef
          aria-label="search executions"
          id="audit-search-input"
          name="audit-search-input"
          onKeyDown={[Function]}
          type="search"
        />
        <Component
          aria-label="search button for search input"
          id="audit-search"
          onClick={[Function]}
          variant="control"
        >
          <SearchIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Component>
      </Component>
    </Component>
    <Component
      variant="label"
    >
      From
    </Component>
    <Component>
      <FromFilter
        fromDate="2020-01-01"
        maxDate="2020-02-01"
        onFromDateUpdate={[Function]}
      />
    </Component>
    <Component
      variant="label"
    >
      To
    </Component>
    <Component>
      <ToFilter
        minDate="2020-01-01"
        onToDateUpdate={[Function]}
        toDate="2020-02-01"
      />
    </Component>
    <Component>
      <Component>
        <Component
          aria-label="Refresh"
          onClick={[Function]}
          title="Refresh"
          variant="plain"
        >
          <SyncIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Component>
      </Component>
    </Component>
    <Component
      variant="pagination"
    >
      <PaginationContainer
        onSetPage={[Function]}
        onSetPageSize={[Function]}
        page={1}
        pageSize={10}
        paginationId="audit-overview-top-pagination"
        total={20}
      />
    </Component>
  </ToolbarContent>
</Toolbar>
`;
